<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dm080"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/getpassword"
            android:gravity="center"
            android:textSize="@dimen/dm030"/>
        <ImageView
            android:visibility="gone"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="onback"
            android:src="@drawable/common_back"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_line"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:background="#F9FDFF"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="21"
        android:gravity="center"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/sign_user_icon"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:src="@drawable/get_back_passwoed"/>
            <ImageView
                android:id="@+id/user_line"
                android:layout_toRightOf="@+id/sign_user_icon"
                android:layout_width="2dp"
                android:layout_centerVertical="true"
                android:layout_height="15dp"
                android:src="@drawable/login_vertival_line"/>
            <EditText
                android:id="@+id/user_edit"
                android:layout_toRightOf="@+id/user_line"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phonenumber"
                android:textSize="@dimen/dm028"
                android:background="@null"/>
            <Button
                android:id="@+id/send"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/login_btn_blue"
                android:text="@string/sendyanzhnegma"
                android:textSize="@dimen/dm028"
                android:textColor="#ffffff"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/yan_icon"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:src="@drawable/get_back_code"/>
            <ImageView
                android:id="@+id/yan_line"
                android:layout_toRightOf="@+id/yan_icon"
                android:layout_width="2dp"
                android:layout_centerVertical="true"
                android:layout_height="15dp"
                android:src="@drawable/login_vertival_line"/>
            <EditText
                android:id="@+id/yan_edit"
                android:layout_toRightOf="@+id/yan_line"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/yanzhengma"
                android:textSize="@dimen/dm028"
                android:background="@null"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:paddingLeft="12dp"
            android:paddingRight="5dp"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/pass_icon"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:src="@drawable/get_back_user"/>
            <ImageView
                android:id="@+id/pass_line"
                android:layout_toRightOf="@+id/pass_icon"
                android:layout_width="2dp"
                android:layout_centerVertical="true"
                android:layout_height="15dp"
                android:src="@drawable/login_vertival_line"/>
            <EditText
                android:id="@+id/pass_edit"
                android:layout_toRightOf="@+id/pass_line"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/setpassword"
                android:textSize="@dimen/dm028"
                android:background="@null"/>
        </RelativeLayout>
        <Button
            android:id="@+id/revise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_blue"
            android:text="@string/sure"
            android:textSize="@dimen/dm032"
            android:textColor="#ffffff"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"/>
    </LinearLayout>
</LinearLayout>
