<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/fm_rl_login_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm080"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/login_tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="@dimen/dm030" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/login_back"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/common_back" />

        </RelativeLayout>
        <RelativeLayout
            android:visibility="gone"
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"></RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:gravity="center">

            <!--<TextView-->
            <!--android:id="@+id/login_title"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="@dimen/dm040"-->
            <!--android:text="舒心定制"-->
            <!--android:textColor="#0090ff"-->
            <!--android:layout_marginTop="27dp"-->
            <!--android:layout_below="@+id/login_logo"-->
            <!--android:layout_centerHorizontal="true" />-->

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/login_logo" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/sign_user_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/get_back_passwoed" />

                <EditText
                    android:id="@+id/user_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/sign_user_icon"
                    android:background="@null"
                    android:hint="@string/usernumber"
                    android:textSize="@dimen/dm026" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sign_user_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/login_line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/pass_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/get_back_user" />

                <EditText
                    android:id="@+id/pass_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/pass_icon"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/dm026" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pass_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/login_line" />
            </RelativeLayout>

            <Button
                android:id="@+id/fm_btn_login_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_btn_blue"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="@dimen/dm026" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center">

            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/regiest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/register"
                    android:textColor="#00579E"
                    android:textSize="@dimen/dm022" />

                <ImageView
                    android:id="@+id/line"
                    android:layout_width="1dp"
                    android:layout_height="15dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/regiest"
                    android:background="#828282"
                    android:src="@drawable/login_vertival_line" />

                <TextView
                    android:id="@+id/forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/line"
                    android:text="@string/forget"
                    android:textColor="#00579E"
                    android:textSize="@dimen/dm022" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>


